tuning conference for jump nav, fixing broken link, only injecting feature people section if they are attached

--- a/views/css/next.css
+++ b/views/css/next.css
@@ -194,7 +194,12 @@ header > img.landscape {
 }
 
 
-.path li a {padding: 0.25em 0.35em;border-bottom: 2px solid rgba(0,0,0,0.025);line-height: 2;transition:border-color 0.25s;}
+.path li a {
+  padding: 0 0.25em;
+  border-bottom: 1px solid rgba(0,0,0,0.15);
+  line-height: 2;
+  transition: border-color 0.25s;
+}
 .lead {font-size: calc(2em + 2vw);line-height:1;}
 .spot {padding:1.5em;margin:0 0 2vmax;}
 .spot ul {
